# Local-First-Desktop-App-Rust-NodeJS

./: .env  .eslintrc.json  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.next/: prerender-manifest.js
.next/cache/: .tsbuildinfo
.next/cache/eslint/: .cache_1fci2dn  .cache_w48b8v
.next/cache/webpack/client-production/: 1.pack  2.pack
.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json
.next/server/app/: _not-found.js  _not-found.js.nft.json
.next/server/app/(root)/: page.js  page.js.nft.json
.next/server/chunks/: 231.js  299.js
.next/server/pages/: _app.js  _app.js.nft.json  _document.js  _document.js.nft.json  _error.js  _error.js.nft.json
.next/types/app/: layout.ts
.next/types/app/(root)/: page.ts
src-server/: .eslintignore  .eslintrc.json  .gitignore  README.md  drizzle.config.ts  esbuild.config.mjs  package.json  pkg.json  pnpm-lock.yaml  tsconfig.json
src-server/src/: env.ts  index.ts  schema.ts  server.ts  utils.ts
src-server/src/server/: index.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  Makefile  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/(root)/: page.tsx
