[package]
name = "app"
version = "1.0.0"
description = ""
authors = ["you"]
default-run = "app"
edition = "2021"
rust-version = "1.75"


[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.19", features = ["protocol-asset"] }
tokio = { version = "1.34.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "process",
] }
log = "0.4.21"
crossbeam-channel = "0.5.12"
strum = { version = "0.26.2", features = ["derive"] }
tauri-plugin-shell = "2.0.0-beta.4"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!z
custom-protocol = ["tauri/custom-protocol"]
